--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
     <div class="w3-col m7">
       <form class="w3-container w3-card-4 w3-padding-16 w3-white">
       <div class="w3-group">
-        <label class="w3-label-red">Name</label>
+        <label class="w3-label-red w3-left">Name</label>
         <input class="w3-input" type="text">
       </div>
       <div class="w3-group">
-        <label class="w3-label-red">Email</label>
+        <label class="w3-label-red w3-left">Email</label>
         <input class="w3-input" type="text">
       </div>
   <div class="w3-group">
@@ -196,18 +196,18 @@
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
+<footer class="w3-container w3-padding-32 w3-theme-d1 w3-right">
   <a class="w3-btn-floating w3-red" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-btn-floating w3-red" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-btn-floating w3-red" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
   <a class="w3-btn-floating w3-red w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 
   <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
-    <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
+    <span class="w3-text w3-padding w3-red w3-hide-small">Go To Top</span>
     <a class="w3-btn w3-theme" href="#myPage"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
   </div>
-  <p><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo">
+  <p><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo" class="w3-left">
 </footer>
 
 <!-- Script For Side Navigation -->
