--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-32 w3-theme-d1 w3-right">
+<footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
   <a class="w3-btn-floating w3-red" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-btn-floating w3-red" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-btn-floating w3-red" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
@@ -207,7 +207,7 @@
     <a class="w3-btn w3-theme" href="#myPage"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
   </div>
-  <p><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo" class="w3-left">
+  <p><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo">
 </footer>
 
 <!-- Script For Side Navigation -->
