--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <input class="w3-input" type="text">
       </div>
       <input class="w3-check w3-left" type="checkbox" unchecked>
-      <label class="w3-validate">Subscribe to mailing list!</label>
+      <label class="w3-validate w3-left">Subscribe to mailing list!</label>
       <button type="button" class="w3-btn w3-right w3-theme">Send</button>
       </form>
     </div>
@@ -198,7 +198,7 @@
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
   <img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo"><p>
-  <a class="w3-btn-floating w3-white w3-xlarge" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
+  <a class="w3-btn-floating w3-white" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-btn-floating w3-white" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-btn-floating w3-white" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
   <a class="w3-btn-floating w3-white" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
