--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         <label class="w3-label-red w3-left">Message</label>
         <input class="w3-input" type="text">
       </div>
-      <input class="w3-check w3-left" type="checkbox" unchecked>
-      <label class="w3-validate w3-left">Subscribe to mailing list!</label>
+      <input class="w3-check" type="checkbox" unchecked>
+      <label class="w3-validate">Subscribe to mailing list!</label>
       <button type="button" class="w3-btn w3-right w3-theme">Send</button>
       </form>
     </div>
