--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
   <img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo"><p>
-  <a class="w3-btn-floating w3-white" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
+  <a class="w3-btn-floating w3-white" href="https://facebook.com/fjtarud" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-btn-floating w3-white" href="https://twitter.com/fjtarud" title="Twitter"><i class="fa fa-twitter"></i></a>
-  <a class="w3-btn-floating w3-white" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
-  <a class="w3-btn-floating w3-white" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+  <a class="w3-btn-floating w3-white" href="https://plus.google.com/fjtarud" title="Google +"><i class="fa fa-google-plus"></i></a>
+  <a class="w3-btn-floating w3-white" href="https://linkedin.com/fjtarud" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 </footer>
 
 <!-- Script For Side Navigation -->
