--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
     <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   </li>
-  <li><a href="#" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="25px" alt="Tarud Design Logo"></a></li>
+  <li><a href="#" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
   <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
   <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
   <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
@@ -197,7 +197,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
-  <img src="fjtarud.github.io/Tarud_Design_Side_Logo.pdf" height="100px" alt="Tarud Design Logo"><p>
+  <img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="100px" alt="Tarud Design Logo"><p>
   <a class="w3-btn-floating w3-white" href="https://facebook.com/fjtarud" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-btn-floating w3-white" href="https://twitter.com/fjtarud" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-btn-floating w3-white" href="https://plus.google.com/fjtarud" title="Google +"><i class="fa fa-google-plus"></i></a>
