--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
   <a class="w3-btn-floating w3-white" href="https://facebook.com/fjtarud" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-btn-floating w3-white" href="https://twitter.com/fjtarud" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-btn-floating w3-white" href="https://plus.google.com/fjtarud" title="Google +"><i class="fa fa-google-plus"></i></a>
-  <a class="w3-btn-floating w3-white" href="https://linkedin.com/fjtarud" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+  <a class="w3-btn-floating w3-white" href="https://linkedin.com/fjtarud" title="Linkedin"><i class="fa fa-linkedin"></i></a><p>
+  <img src="facebook_icon.png" height="100px" alt="Tarud Design Logo">
+  <img src="twitter_icon.png" height="100px" alt="Tarud Design Logo">
+  <img src="google_icon.png" height="100px" alt="Tarud Design Logo">
+  <img src="linkedin_icon.png" height="100px" alt="Tarud Design Logo">
 </footer>
 
 <!-- Script For Side Navigation -->
