--- a/index.html
+++ b/index.html
@@ -202,10 +202,11 @@
   <a class="w3-btn-floating w3-white" href="https://twitter.com/fjtarud" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-btn-floating w3-white" href="https://plus.google.com/fjtarud" title="Google +"><i class="fa fa-google-plus"></i></a>
   <a class="w3-btn-floating w3-white" href="https://linkedin.com/fjtarud" title="Linkedin"><i class="fa fa-linkedin"></i></a><p>
-  <img src="facebook_icon.png" height="30px" alt="Tarud Design Logo" target="_blank" href="https://facebook.com/fjtarud">
-  <img src="twitter_icon.png" height="30px" alt="Tarud Design Logo" target="_blank" href="https://twitter.com/fjtarud">
-  <img src="google_icon.png" height="30px" alt="Tarud Design Logo" target="_blank" href="https://plus.google.com/fjtarud">
-  <img src="linkedin_icon.png" height="30px" alt="Tarud Design Logo" target="_blank" href="https://linkedin.com/fjtarud">
+  
+  <li><a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="25px" alt="facebook" target="_blank"></a></li>
+  <li><a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="25px" alt="twitter" target="_blank"></a></li>
+  <li><a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="25px" alt="google" target="_blank"></a></li>
+  <li><a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="25px" alt="linked in" target="_blank"></a></li>
 </footer>
 
 <!-- Script For Side Navigation -->
