--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
   <a class="w3-btn-floating w3-white" href="https://plus.google.com/fjtarud" title="Google +"><i class="fa fa-google-plus"></i></a>
   <a class="w3-btn-floating w3-white" href="https://linkedin.com/fjtarud" title="Linkedin"><i class="fa fa-linkedin"></i></a><p>
   
-  <li><a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="25px" alt="facebook" target="_blank"></a></li>
-  <li><a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="25px" alt="twitter" target="_blank"></a></li>
-  <li><a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="25px" alt="google" target="_blank"></a></li>
-  <li><a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="25px" alt="linked in" target="_blank"></a></li>
+  <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="25px" alt="facebook" target="_blank"></a>
+  <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="25px" alt="twitter" target="_blank"></a>
+  <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="25px" alt="google" target="_blank"></a>
+  <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="25px" alt="linked in" target="_blank"></a>
 </footer>
 
 <!-- Script For Side Navigation -->
