--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
-  <img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="100px" alt="Tarud Design Logo"><p>
+  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="100px" alt="Tarud Design Logo"><p>
   <a class="w3-btn-floating w3-white" href="https://facebook.com/fjtarud" title="Facebook"><i class="fa fa-facebook"></i></a>
   <a class="w3-btn-floating w3-white" href="https://twitter.com/fjtarud" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-btn-floating w3-white" href="https://plus.google.com/fjtarud" title="Google +"><i class="fa fa-google-plus"></i></a>
