--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+<style>  
+  
+  header,
+  footer {
+  color: white;
+  background-color: black;
+  }
+
+</style>  
+  
 <body id="myPage">
+
 
 <!-- Side Navigation on click -->
 <nav class="w3-sidenav w3-white w3-card-2 w3-animate-left" style="display:none;z-index:2" id="mySidenav">
@@ -196,7 +208,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
+<footer>
   <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="100px" alt="Tarud Design Logo"><p>
   <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
   <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
