--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     background-color: black;
   }
   
+  section {
+    background-color: white;
+  }
+  
   header,
   footer {
   color: white;
