--- a/index.html
+++ b/index.html
@@ -208,8 +208,35 @@
 </div>
 
 <!-- Google Maps -->
+<div id="googleMap" style="width:100%;height:420px;"></div>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script>
+var myCenter = new google.maps.LatLng(25.808435, -80.382953);
+
+function initialize() {
+var mapProp = {
+  center: myCenter,
+  zoom: 10,
+  scrollwheel: false,
+  draggable: false,
+  mapTypeId: google.maps.MapTypeId.ROADMAP
+  };
+
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+var marker = new google.maps.Marker({
+  position: myCenter,
+});
+
+marker.setMap(map);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+  
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3591.8494232481753!2d-80.38597058450229!3d25.808541283615664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9bea399b4d093%3A0x5ea803b71439bd20!2s3705+NW+115th+Ave%2C+Miami%2C+FL+33178!5e0!3m2!1sen!2sus!4v1476303581570" width="100%" height="420px" frameborder="0" style="border:0" allowfullscreen></iframe>
 
+  
 
 <!-- Footer -->
 <footer>
