--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Dosis|Ubuntu" rel="stylesheet">
+  
 <style>  
   
   body {
