--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Dosis|Ubuntu" rel="stylesheet">
   
 <style>  
   
@@ -178,6 +177,7 @@
     </div>
 
 <!-- Contact Container -->
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3591.8494232481753!2d-80.38597058450229!3d25.808541283615664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9bea399b4d093%3A0x5ea803b71439bd20!2s3705+NW+115th+Ave%2C+Miami%2C+FL+33178!5e0!3m2!1sen!2sus!4v1476303581570" width="420px" height="420px" frameborder="0" style="border:0" allowfullscreen scrollwheel="false" draggable="false"></iframe>
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
