--- a/index.html
+++ b/index.html
@@ -87,6 +87,44 @@
 </div>
 <hr>
   
+<!-- Work Row -->
+<div class="w3-row-padding w3-center w3-padding-16 w3-theme-l1" id="work">
+<h2>Work</h2>
+<p>Since begining studies at the Art Institute at Miami International University of Art and Design, Francisco has evolved as a designer in his many skills and abilities to become a greater creative.
+</div>
+
+<div class="w3-third">
+<div class="w3-card-2 w3-white">
+  <img src="/New_Times_Cover.jpg" alt="New Times Magazine Cover" style="width:100%">
+  <div class="w3-container">
+  <h3>New Times Cover</h3>
+  <h4>Digital Illustration</h4>
+  </div>
+  </div>
+</div>
+
+<div class="w3-third">
+<div class="w3-card-2 w3-white">
+  <img src="/Porsche_Magazine_Cover.jpg" alt="Porsche Insider Magazine Cover" style="width:100%">
+  <div class="w3-container">
+  <h3>Porsche Insider Cover</h3>
+  <h4>Introduction to Layout</h4>
+  </div>
+  </div>
+</div>
+
+<div class="w3-third">
+<div class="w3-card-2 w3-white">
+  <img src="/Daikin_Colombia.jpg" alt="Thermotar Daikin Colombia" style="width:100%">
+  <div class="w3-container">
+  <h3>Daikin Colombia</h3>
+  <h4>Thermotar Colombia</h4>
+  </div>
+  </div>
+</div>
+
+</div>
+  
 <!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
     <h1>PACKAGES</h1>
