--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 
 <div class="w3-third">
 <div class="w3-card-2 w3-white">
-  <img src="/Daikin_Colombia.jpg" alt="Thermotar Daikin Colombia" style="width:100%">
+  <img src="/Animal_Planet_Cover.jpg" alt="Thermotar Daikin Colombia" style="width:100%">
   <div class="w3-container">
-  <h3>Daikin Colombia</h3>
-  <h4>Thermotar Colombia</h4>
+  <h3>Animal Planet Cover</h3>
+  <h4>Image Manipulation</h4>
   </div>
   </div>
 </div>
