--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <div class="w3-third">
 <div class="w3-card-2 w3-white">
   <img src="/New_Times_Cover.jpg" alt="New Times Magazine Cover" style="width:100%">
-  <div class="w3-container">
+  <div class="w3-container w3-center">
   <h3>New Times Cover</h3>
   <h4>Digital Illustration</h4>
   </div>
@@ -106,7 +106,7 @@
 <div class="w3-third">
 <div class="w3-card-2 w3-white">
   <img src="/Porsche_Magazine_Cover.jpg" alt="Porsche Insider Magazine Cover" style="width:100%">
-  <div class="w3-container">
+  <div class="w3-container w3-center">
   <h3>Porsche Insider Cover</h3>
   <h4>Introduction to Layout</h4>
   </div>
@@ -116,7 +116,7 @@
 <div class="w3-third">
 <div class="w3-card-2 w3-white">
   <img src="/Animal_Planet_Cover.jpg" alt="Thermotar Daikin Colombia" style="width:100%">
-  <div class="w3-container">
+  <div class="w3-container w3-center">
   <h3>Animal Planet Cover</h3>
   <h4>Image Manipulation</h4>
   </div>
