--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </li>
   <li><a href="#" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
   <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
+   <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
   <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
   <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
  </ul>
