--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </div>
 
 </div>
-  <br><br>
+  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
 <hr>
   
 <!-- Pricing Row -->
@@ -262,7 +262,7 @@
   <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
   <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
   <br>
-  <br>
+  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
 </footer>
 
 <!-- Script For Side Navigation -->
