--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
 </div>
 
 </div>
+  <div class="w3-row">
   <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+  </div>
 <hr>
   
 <!-- Pricing Row -->
