--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
   </div>
 </div>
 
-</div>
   <div class="w3-row">
+  <div class="w3-card-2 w3-white-center">
   <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+  </div>
   </div>
 <hr>
   
