--- a/index.html
+++ b/index.html
@@ -129,11 +129,10 @@
   </div>
 </div>
 
-  <div class="w3-row">
-  <div class="w3-card-2 w3-white-center">
-  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
-  </div>
-  </div>
+<div class="w3-row-padding w3-center w3-padding-16 w3-theme-l1" id="Copyright">
+  <p>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.</p>
+</div>
+  
 <hr>
   
 <!-- Pricing Row -->
