--- a/about.html
+++ b/about.html
@@ -2,11 +2,72 @@
 <html>
   
   <head>
-    <title>Tarud - Design | About</title>
-  </head>
+   <title>Tarud Design - Unique Creative Experience</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   
-  <body>
-    <h1>Meet Francisco Tarud</h1>
+<style>  
+  
+  h1 {
+   font-family: 'Roboto', sans-serif;
+  }
+  
+  body {
+    margin: 0;
+  }
+  
+  header,
+  footer {
+  color: white;
+  background-color: black;
+  }
+  
+
+</style>  
+  </head>
+    
+<body>
+
+
+<!-- Side Navigation on click -->
+<nav class="w3-sidenav w3-white w3-card-2 w3-animate-left" style="display:none;z-index:2" id="mySidenav">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-xxxlarge w3-text-teal">Close
+    <i class="fa fa-remove"></i>
+  </a>
+  <a href="#">Link 1</a>
+  <a href="#">Link 2</a>
+  <a href="#">Link 3</a>
+  <a href="#">Link 4</a>
+  <a href="#">Link 5</a>
+</nav>
+
+<!-- Navbar -->
+<div class="w3-top">
+ <ul class="w3-navbar w3-theme-d2 w3-left-align">
+  <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+    <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+  </li>
+  <li><a href="#" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
+  <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
+   <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
+  <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
+  <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
+ </ul>
+
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
+    <ul class="w3-navbar w3-left-align w3-theme">
+      <li><a href="#team">About</a></li>
+      <li><a href="#pricing">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
+</div>
+    
+  
   </body>
 
 </html>
