--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
-<!doctype.html>
+<!doctype html>
 <html>
-  <head>
-   <title>Tarud Design - About</title>
+<title>Tarud Design - Unique Creative Experience</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
@@ -26,8 +25,7 @@
   
 
 </style>  
-  </head>
-    
+  
 <body>
 
 
@@ -50,7 +48,7 @@
     <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
   </li>
   <li><a href="#" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
-  <li class="w3-hide-small"><a href="#team" class="w3-hover-white">About</a></li>
+  <li class="w3-hide-small"><a href="www.tarud-design.com/about.html" class="w3-hover-white">About</a></li>
    <li class="w3-hide-small"><a href="#work" class="w3-hover-white">Work</a></li>
   <li class="w3-hide-small"><a href="#pricing" class="w3-hover-white">Services</a></li>
   <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
@@ -59,12 +57,14 @@
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
     <ul class="w3-navbar w3-left-align w3-theme">
-      <li><a href="#team">About</a></li>
+      <li><a href="www.tarud-design.com/about.html">About</a></li>
+      <li><a href="#work">Work</a></li>
       <li><a href="#pricing">Services</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
 </div>
+
     
 <div class="w3-container w3-padding-64 w3-center" id="team">
 <h1>MEET FRANCISCO TARUD</h1>
