--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<title>Tarud Design - Unique Creative Experience</title>
+<title>Tarud Design - About</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
