--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
 </div>
 
 <!-- Work Row -->
-<div class="w3-row-padding w3-center w3-padding-16 w3-theme-l1" id="work">
+<div class="w3-container w3-padding-64 w3-center" id="work">
 <h2>Work</h2>
 <p>Since begining studies at the Art Institute at Miami International University of Art and Design, Francisco has evolved as a designer in his many skills and abilities to become a greater creative.
 </div>
