--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
 </div>
 
 <!-- Pricing Row -->
-<div class="w3-row-padding w3-center" id="pricing">
+<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
     <h1>PACKAGES</h1>
     <p>Choose a package that fits your business needs.</p><br>
     <div class="w3-quarter w3-margin-bottom">
