--- a/services.html
+++ b/services.html
@@ -144,7 +144,7 @@
           <h1 class="w3-wide"><i class="fa fa-usd"></i> 2,000</h1>
       </ul>
     </div>
-  </body>
+  </div>
   
 <!-- Footer -->
 <footer>
@@ -181,4 +181,5 @@ function openNav() {
     }
 }
 </script>
+    </body>
 </html>
