--- a/about.html
+++ b/about.html
@@ -28,23 +28,9 @@
     margin: 0;
   }
   
-
 </style>  
   
 <body>
-
-
-<!-- Side Navigation on click -->
-<nav class="w3-sidenav w3-white w3-card-2 w3-animate-left" style="display:none;z-index:2" id="mySidenav">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-xxxlarge w3-text-teal">Close
-    <i class="fa fa-remove"></i>
-  </a>
-  <a href="#">Link 1</a>
-  <a href="#">Link 2</a>
-  <a href="#">Link 3</a>
-  <a href="#">Link 4</a>
-  <a href="#">Link 5</a>
-</nav>
 
 <!-- Navbar -->
 <div class="w3-top">
@@ -56,7 +42,7 @@
   <li class="w3-hide-small"><a href="/about.html" class="w3-hover-white">About</a></li>
    <li class="w3-hide-small"><a href="/work.html" class="w3-hover-white">Work</a></li>
   <li class="w3-hide-small"><a href="/services.html" class="w3-hover-white">Services</a></li>
-  <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
+  <li class="w3-hide-small"><a href="/contact.html" class="w3-hover-white">Contact</a></li>
  </ul>
 
   <!-- Navbar on small screens -->
@@ -65,7 +51,7 @@
       <li><a href="/about.html">About</a></li>
       <li><a href="/work.html">Work</a></li>
       <li><a href="/services.html">Services</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
   </div>
 </div>
