--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
   <li class="w3-hide-small"><a href="/about.html" class="w3-hover-white">About</a></li>
    <li class="w3-hide-small"><a href="/work.html" class="w3-hover-white">Work</a></li>
   <li class="w3-hide-small"><a href="/services.html" class="w3-hover-white">Services</a></li>
-  <li class="w3-hide-small"><a href="#contact" class="w3-hover-white">Contact</a></li>
+  <li class="w3-hide-small"><a href="/contact.html" class="w3-hover-white">Contact</a></li>
  </ul>
 
   <!-- Navbar on small screens -->
@@ -51,7 +51,7 @@
       <li><a href="/about.html">About</a></li>
       <li><a href="/work.html">Work</a></li>
       <li><a href="/services.html">Services</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
   </div>
 </div>
