--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
 
 <!-- Contact Container -->
 <div class="w3-row-padding w3-center w3-padding-64" id="contact">
-    <p>Go ahead, send us a message! We would love to hear from you.</p> 
-  </div><br> 
+    <h1>Go ahead, send us a message! We would love to hear from you.</h1> 
+  </div> 
 <div class="w3-container w3-padding-64 w3-theme-l5" id="contact">
   <div class="w3-row">
     <div class="w3-col m5">
