--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,8 @@
   <div class="w3-group">
         <label class="w3-label-red w3-left">Message</label>
         <input class="w3-input" type="text">
+        <input class="w3-input">
+        <input class="w3-input">
       </div>
       <input class="w3-check" type="checkbox" unchecked>
       <label class="w3-validate">Subscribe to mailing list!</label>
