--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <title>Tarud Design - Work</title>
+  <link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
