--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
-  <img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="width:100%;min-height:250px;max-height:1500px">
+  <img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="min-height:250px;max-height:1500px">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom"></div>
 </div>
 
