--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     </ul>
   </div>
 </div>
-  
+
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
   <img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="width:100%">
-  <div class="w3-container w3-display-bottomleft w3-margin-bottom"></div>
+  <div class="w3-container w3-display-bottomleft w3-margin-top"></div>
 </div>
 
 <!-- Footer -->
