--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 <!-- Footer -->
 <footer>
   <br>
-  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="100px" alt="Tarud Design Logo"><p>
+  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="160px" alt="Tarud Design Logo"><p>
   <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
   <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
   <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
