--- a/index.html
+++ b/index.html
@@ -68,6 +68,41 @@
   <img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="width:100%;min-height:250px;max-height:1500px">
   <div class="w3-container w3-display-bottomleft w3-margin-top"></div>
 </div>
+  
+<!-- Small Menu Row -->
+<div class="w3-row-padding w3-center w3-padding-64" id="small menu">
+
+    <div class="w3-third w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <h2><a href="/about.html">About</a></h2>
+        </li>
+        <li class="w3-padding-16">A team of design lovers with a special way of doing things.</li>
+        </li>
+      </ul>
+    </div>
+
+      <div class="w3-third w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <h2><a href="/work.html">Work</a></h2>
+        </li>
+        <li class="w3-padding-16">We love what we do and we believe it shines through in the results.</li>
+        </li>
+      </ul>
+    </div>
+
+     <div class="w3-third w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <li class="w3-theme">
+          <h2><a href="/contact.html">Contact</a></h2>
+        </li>
+        <li class="w3-padding-16">We cover all of South Florida and the Caribbean.</li>
+        </li>
+      </ul>
+    </div>
+
+</div>
 
 <!-- Footer -->
 <footer>
