--- a/index.html
+++ b/index.html
@@ -100,6 +100,44 @@
 
 </div>
 
+<!-- Web Row -->
+<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="web">
+
+<div class="w3-half">
+<div class="w3-container">
+  <img src="/w3images/fjords.jpg" alt="Vernazza" style="width:100%">
+  </div>
+</div>
+
+<div class="w3-half">
+<div class="w3-card-2 w3-white">
+  <div class="w3-container">
+  <h3><b>Web Design</b></h3>
+  <p>We create completely bespoke, striking designs that work alongside your brand to engage and enthral your target audience. Clarity is key.</p>
+  </div>
+  </div>
+</div>
+
+<div class="w3-half">
+<div class="w3-card-2 w3-white">
+  <div class="w3-container">
+  <h3><b>Web Development</b></h3>
+  <p>We integrate cutting edge content management and e-commerce systems, develop mobile applications and other technical stuff.</p>
+  </div>
+  </div>
+</div>
+
+<div class="w3-half">
+<div class="w3-card-2 w3-white">
+  <div class="w3-container">
+  <h3><b>Content Strategy</b></h3>
+  <p>We take the time to understand what it is you want to say and help you develop copy that is engaging and informative.</p>
+  </div>
+  </div>
+</div>
+
+</div>
+
 <!-- Footer -->
 <footer>
   <br>
