--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <div class="w3-half">
 <div class="w3-container">
-  <img src="/w3images/fjords.jpg" alt="Vernazza" style="width:100%">
+  <img src="fjtarud.github.io/web_development.jpg" alt="Web Development" style="width:100%">
   </div>
 </div>
 
