--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 
     <div class="w3-third w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
+        <div class="w3-container" style="position:relative">
+  <a onclick="w3_open(/about.html)" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+  <i class="fa fa-plus"></i></a>
+</div>
         <li class="w3-theme">
           <h2><a href="/about.html">About</a></h2>
         </li>
