--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
         </li>
       </ul>
     </div>
+  
+  <div class="w3-third w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-hover-shadow">
+        <div class="w3-container" style="position:relative">
+  <a href="/about.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+  <i class="fa fa-plus"></i></a>
+</div>
+        <li class="w3-theme">
+          <h2><a href="/about.html">About</a></h2>
+        </li>
+        <li class="w3-padding-16">A team of design lovers with a special way of doing things.</li>
+        </li>
+      </ul>
+    </div>
 
       <div class="w3-third w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
