--- a/index.html
+++ b/index.html
@@ -89,20 +89,6 @@
   <i class="fa fa-plus"></i></a>
 </div>
         <li class="w3-theme">
-          <h2><a href="/about.html">About</a></h2>
-        </li>
-        <li class="w3-padding-16">A team of design lovers with a special way of doing things.</li>
-        </li>
-      </ul>
-    </div>
-
-      <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        div class="w3-container" style="position:relative">
-  <a href="/work.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
-  <i class="fa fa-plus"></i></a>
-</div>
-        <li class="w3-theme">
           <h2><a href="/work.html">Work</a></h2>
         </li>
         <li class="w3-padding-16">We love what we do and we believe it shines through in the results.</li>
@@ -110,8 +96,12 @@
       </ul>
     </div>
 
-     <div class="w3-third w3-margin-bottom">
+<div class="w3-third w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
+        <div class="w3-container" style="position:relative">
+  <a href="/about.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+  <i class="fa fa-plus"></i></a>
+</div>
         <li class="w3-theme">
           <h2><a href="/contact.html">Contact</a></h2>
         </li>
@@ -119,6 +109,7 @@
         </li>
       </ul>
     </div>
+
 <img src="fjtarud.github.io/web_design.jpg" alt="Web Design" style="width:100%;min-height:220px;max-height:620px">
 </div>
 
