--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="w3-third w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <div class="w3-container" style="position:relative">
-  <a href="/about.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+  <a href="/work.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
   <i class="fa fa-plus"></i></a>
 </div>
         <li class="w3-theme">
@@ -100,7 +100,7 @@
 <div class="w3-third w3-margin-bottom">
       <ul class="w3-ul w3-border w3-hover-shadow">
         <div class="w3-container" style="position:relative">
-  <a href="/about.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+  <a href="/contact.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
   <i class="fa fa-plus"></i></a>
 </div>
         <li class="w3-theme">
