--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
 </div>
   
 <!-- Small Menu Row -->
-  <hr>
 <div class="w3-row-padding w3-center w3-padding-64" id="small menu">
 
     <div class="w3-third w3-margin-bottom">
@@ -110,8 +109,10 @@
         </li>
       </ul>
     </div>
-<hr><br>
+
+<div class="w3-row">
 <img src="fjtarud.github.io/web_design.jpg" alt="Web Design" style="width:100%;min-height:220px;max-height:620px">
+</div>
 </div>
 
 <!-- Footer -->
