--- a/midterm.html
+++ b/midterm.html
@@ -2,10 +2,30 @@
 <html>
 <style>
 
-html {
-font-family: impact;
-}
+  html {
+    font-family: impact;
+    background: url(https://pixabay.com/p-1403902/?no_redirect) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    }
+  
+  h1 {
+    font-family: georgia;
+    font-size: 48px;
+  }
 
 </style>
 
+<body>
+  <section>
+    <h1>Midterm Exam</h1>
+    <h2>IM1200 Basic Web Design</h2>
+    <h4>Francisco Tarud</h4>
+    <h4>1<sup>st</sup> October, 2016</h4>
+  </section>
+  
+  
+</body>
 </html>
