--- a/midterm.html
+++ b/midterm.html
@@ -4,10 +4,7 @@
 
   html {
     font-family: impact;
-    background: url(https://pixabay.com/p-1403902/?no_redirect) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url(fjtarud.github.io/black-wood-1403902_1280.jpg); 
     background-size: cover;
     }
   
