--- a/midterm.html
+++ b/midterm.html
@@ -4,8 +4,7 @@
 
   html {
     font-family: impact;
-    background: url(fjtarud.github.io/black-wood-1403902_1280.jpg); 
-    background-size: cover;
+    background-image: url("fjtarud.github.io/black-wood-1403902_1280.jpg");
     }
   
   h1 {
