--- a/midterm.html
+++ b/midterm.html
@@ -4,12 +4,21 @@
 
   html {
     font-family: impact;
+    color: white;
     background-image: url("fjtarud.github.io/black-wood-1403902_1280.jpg");
     }
   
   h1 {
     font-family: georgia;
     font-size: 48px;
+    text-shadow: 0 2px 0 #c9c9c9;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4 {
+    text-transform: uppercase
   }
 
 </style>
