--- a/midterm.html
+++ b/midterm.html
@@ -31,6 +31,7 @@
     <h4>1<sup>st</sup> October, 2016</h4>
   </section>
   
+  <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_512.png" height="100px" alt="HTML 5 Logo">
   
 </body>
 </html>
