--- a/midterm.html
+++ b/midterm.html
@@ -31,7 +31,10 @@
     <h4>1<sup>st</sup> October, 2016</h4>
   </section>
   
+  <footer>
+  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
   <img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_512.png" height="100px" alt="HTML 5 Logo">
-  
+  </footer>
+    
 </body>
 </html>
