--- a/midterm.html
+++ b/midterm.html
@@ -3,6 +3,7 @@
 <style>
 
   html {
+    text-align: center; 
     font-family: impact;
     color: white;
     background-image: url("fjtarud.github.io/black-wood-1403902_1280.jpg");
