--- a/midterm.html
+++ b/midterm.html
@@ -28,13 +28,12 @@
   <section>
     <h1>Midterm Exam</h1>
     <h2>IM1200 Basic Web Design</h2>
-    <h4>Francisco Tarud</h4>
+    <h4><a href="index.html">Francisco Tarud</a></h4>
     <h4>1<sup>st</sup> October, 2016</h4>
   </section>
   
   <footer>
   <p><img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_512.png" height="100px" alt="HTML 5 Logo">
-  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo">
   </footer>
     
 </body>
