--- a/midterm.html
+++ b/midterm.html
@@ -33,7 +33,7 @@
     <h1>Midterm Exam</h1>
     <h2>IM1200 Basic Web Design</h2>
     <h4><a href="index.html">Francisco Tarud</a></h4>
-    <h4>1<sup>st</sup> October, 2016</h4>
+    <h4>November 1<sup>st</sup>, 2016</h4>
   </section>
   
   <footer>
