--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -7,7 +7,7 @@
     font-family: impact;
     color: white;
     background-image: url("fjtarud.github.io/extra_credit_background.jpg");
-    background-position: center;
+    background-position: right bottom, left top;
     }
   
   h1 {
