--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -8,6 +8,8 @@
     color: white;
     background-image: url("fjtarud.github.io/extra_credit_background.jpg");
     background-position: right bottom, left top;
+    background-repeat: no-repeat;
+    background-size:cover;
     }
   
   h1 {
