--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -15,7 +15,7 @@
   h1 {
     font-family: georgia;
     font-size: 48px;
-    text-shadow: 0 2px 0 #c9c9c9;
+    text-shadow: 0 2px 0 #0099cc;
   }
   
   h1,
@@ -26,7 +26,7 @@
   }
   
   a {
-    color: #F06529;
+    color: #0099cc;
   }
 
 </style>
