--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -27,15 +27,26 @@
   a {
     color: #0099cc;
   }
+  
+  button {
+color: white;
+font-size: 20px;
+background-color: #0099cc;
+border-style: solid;
+border-width: 5px;
+border-color: #0099cc;
+border-radius: 5px;
+padding-top: 10px;
+padding-right: 100px;
+padding-bottom: 10px;
+padding-left: 100px;
+}
 
 </style>
 
 <body>
   <section>
-    <h1>Midterm Exam</h1>
-    <h2>IM1200 Basic Web Design</h2>
-    <h4><a href="index.html">Francisco Tarud</a></h4>
-    <h4>1<sup>st</sup> October, 2016</h4>
+<button type="button" onclick="alert('Hello world!')">START NOW!</button>
   </section>
   
   <footer>
