--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -1,35 +1,51 @@
 <!doctype html>
 <html>
+<link href="https://fonts.googleapis.com/css?family=PT+Sans|Raleway|Ubuntu:300,400" rel="stylesheet">
+
 <style>
 
-  html {
+html {
     text-align: center; 
     font-family: impact;
     color: white;
     background-image: url("fjtarud.github.io/extra_credit_background.jpg");
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size: cover;
     }
-  
-  h1 {
-    font-family: georgia;
-    font-size: 48px;
-    text-shadow: 0 2px 0 #0099cc;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4 {
-    text-transform: uppercase
-  }
-  
-  a {
-    color: #0099cc;
-  }
-  
-  button {
+
+h1 {
+font-family: 'Ubuntu', sans-serif;
+font-size: 90px;
+font-weight: 300;
+}
+
+h2 {
+font-family: 'Ubuntu', sans-serif;
+font-size: 30px;
+font-weight: 300;
+}
+
+h3 {
+font-family: 'Ubuntu', sans-serif;
+font-size: 20px;
+font-weight: 300;
+}
+
+h4 {
+font-family: 'Ubuntu', sans-serif;
+color: #0099cc;
+font-size: 15px;
+font-weight: 300;
+}
+
+a {
+color: #0099cc;
+text-decoration: none;
+}
+
+button {
 color: white;
+font-family: 'Raleway', sans-serif;
 font-size: 20px;
 background-color: #0099cc;
 border-style: solid;
@@ -44,13 +60,15 @@ padding-left: 100px;
 
 </style>
 
+
 <body>
-  <section>
+<h1>EXTRA CREDIT</h1>
+<h2>Code this website!</h2>
+<br>
+<br>
 <button type="button" onclick="alert('Hello world!')">START NOW!</button>
-  </section>
-  
-  <footer>
-  </footer>
-    
+<h3>It's easy if you know your <a href="http://www.w3schools.com/html/">HTML</a> and <a href="http://www.w3schools.com/css/">CSS</a></h3>
+<h4>Due week 6.</h4>
+
 </body>
 </html>
