--- a/midterm-extra-credit.html
+++ b/midterm-extra-credit.html
@@ -11,6 +11,13 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     }
+    
+
+body {
+    padding: 70px 0;
+    text-align: center;
+}
+    
 
 h1 {
 font-family: 'Ubuntu', sans-serif;
