--- a/about.html
+++ b/about.html
@@ -81,6 +81,10 @@
 
 </div>
   
+<div class="w3-container w3-padding-64 w3-center" id="twitter">
+<a class="twitter-timeline" href="https://twitter.com/FJTarud">Tweets by FJTarud</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+  
 <!-- Footer -->
 <footer>
   <br>
