--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
 
 </div>
   
-<div class="w3-container w3-padding-64 w3-center w3-half" id="twitter">
-<a class="twitter-timeline" href="https://twitter.com/FJTarud">Tweets by FJTarud</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div class="w3-container w3-padding-64 w3-center" id="twitter">
+<a class="twitter-timeline" style="width:50%" href="https://twitter.com/FJTarud">Tweets by FJTarud</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
   
 <!-- Footer -->
