--- a/about.html
+++ b/about.html
@@ -80,6 +80,13 @@
 </div>
 
 </div>
+  
+<section>
+  <!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/295123" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:1300px"></iframe>
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/295124" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:1300px"></iframe>
+  </section>
 
   
 <!-- Footer -->
