--- a/about.html
+++ b/about.html
@@ -83,9 +83,9 @@
   
 <section>
   <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/295123" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:1300px"></iframe>
+<iframe src="https://snapwidget.com/embed/295123" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:50%; height:1300px"></iframe>
 <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/295124" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:1300px"></iframe>
+<iframe src="https://snapwidget.com/embed/295124" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:50%; height:1300px"></iframe>
   </section>
 
   
