--- a/work.html
+++ b/work.html
@@ -91,6 +91,35 @@
   <h4>Image Manipulation</h4>
   </div>
   </div>
+<hr>
+<div class="w3-third">
+<div class="w3-card-2 w3-white">
+  <img src="/Moto-Cover.jpg" alt="MotoGP Cover" style="width:100%">
+  <div class="w3-container w3-center">
+  <h3>MotoGP Magazine Cover</h3>
+  <h4>Application and Industry</h4>
+  </div>
+  </div>
+</div>
+
+<div class="w3-third">
+<div class="w3-card-2 w3-white">
+  <img src="/Trump-Poster.jpg" alt="Trump Poster" style="width:100%">
+  <div class="w3-container w3-center">
+  <h3>Music Festival Poster</h3>
+  <h4>Application and Industry</h4>
+  </div>
+  </div>
+</div>
+
+<div class="w3-third">
+<div class="w3-card-2 w3-white">
+  <img src="/Quaker-Ad.jpg" alt="Quaker Ad" style="width:100%">
+  <div class="w3-container w3-center">
+  <h3>Quaker Ad</h3>
+  <h4>Application and Industry</h4>
+  </div>
+  </div>
 </div>
   
   </div>
