--- a/work.html
+++ b/work.html
@@ -91,8 +91,8 @@
   <h4>Image Manipulation</h4>
   </div>
   </div>
-<hr>
-<div class="w3-third">
+<section>
+<p><div class="w3-third">
 <div class="w3-card-2 w3-white">
   <img src="/Moto-Cover.jpg" alt="MotoGP Cover" style="width:100%">
   <div class="w3-container w3-center">
@@ -121,6 +121,7 @@
   </div>
   </div>
 </div>
+  </section>
   
   </div>
   
