--- a/work.html
+++ b/work.html
@@ -91,7 +91,8 @@
   <h4>Image Manipulation</h4>
   </div>
   </div>
-<section>
+</div>
+<div class="w3-container w3-padding-64 w3-center" id="work2">
 <p><div class="w3-third">
 <div class="w3-card-2 w3-white">
   <img src="/Moto-Cover.jpg" alt="MotoGP Cover" style="width:100%">
@@ -121,7 +122,6 @@
   </div>
   </div>
 </div>
-  </section>
   
   </div>
   
