--- a/about.html
+++ b/about.html
@@ -57,6 +57,8 @@
     </ul>
   </div>
 </div>
+  <p><a href="/Francisco Tarud Resume.pdf"> Resume</a>
+  <p><iframe src="/Francisco Tarud Resume.pdf" height="100%">
 
     
 <div class="w3-container w3-padding-64 w3-center" id="team">
