--- a/about.html
+++ b/about.html
@@ -57,9 +57,6 @@
     </ul>
   </div>
 </div>
-  <p><a href="/Francisco Tarud Resume.pdf"> Resume</a>
-  <p><iframe src="/Francisco Tarud Resume.pdf" height="100%">
-
     
 <div class="w3-container w3-padding-64 w3-center" id="team">
 <h1>MEET FRANCISCO TARUD</h1>
@@ -82,6 +79,11 @@
 </div>
 
 </div>
+  
+  <div class="w3-row"><br>
+ <p><a href="/Francisco Tarud Resume.pdf"> Resume</a>
+  <p><iframe src="/Francisco Tarud Resume.pdf" height="100%">
+  </div>
   
 
   
