--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
   
   <div class="w3-container w3-padding-64 w3-center" id="Resume">
   <div class="w3-row"><br>
-  <p><iframe src="/Francisco Tarud Resume.pdf" width="100%"><p><a href="/Francisco Tarud Resume.pdf"> Resume</a>
+  <p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="100%"><p><a href="/Francisco Tarud Resume.pdf"> Resume</a>
     </div>
     </div>
   
