--- a/about.html
+++ b/about.html
@@ -79,12 +79,11 @@
 </div>
 
 </div>
-  
-  <div class="w3-container w3-padding-64 w3-center" id="Resume">
+  <section>
   <div class="w3-row"><br>
-  <p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="100%"><p><a href="/Francisco Tarud Resume.pdf"> Resume</a>
+  <p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="100%"><p>
     </div>
-    </div>
+  </section>
   
 
   
