--- a/about.html
+++ b/about.html
@@ -79,10 +79,9 @@
 </div>
 
 </div>
+  
   <section>
-  <div class="w3-row"><br>
-  <p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="100%"><p>
-    </div>
+  <p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="100%">
   </section>
   
 
