--- a/about.html
+++ b/about.html
@@ -80,9 +80,11 @@
 
 </div>
   
-  <section>
-  <p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="100%">
-  </section>
+<div class="w3-container w3-padding-64 w3-center" id="resume">
+<div class="w3-row"><br>
+<p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="100%">
+</div>
+</div>
   
 
   
