--- a/about.html
+++ b/about.html
@@ -77,12 +77,10 @@
   <h4><b>Photographer</b></h4>
   <p>Our Photographer has excellent creative abilities, as well as good eyesight and the ability to translate the images he sees with his eyes to one captured by the camera. Francisco is not just good with a camera, but also has in-depth knowledge about lighting conditions. Often working outdoors, and scheduling the right time to take a photo so it presents the subject in the best light. Sometimes working with assistants and models, Francisco is able to communicate effectively to capture the proper images.</p>
 </div>
-
-</div>
-  
+</div>  
 <div class="w3-container w3-padding-64 w3-center" id="resume">
-<div class="w3-row"><br>
-<p><iframe src="/Francisco Tarud Resume.pdf" height="640px" width="640px"></iframe>
+<div class="w3-row">
+<iframe src="/Francisco Tarud Resume.pdf" height="640px" width="640px"></iframe>
 </div>
 </div>
   
