--- a/about.html
+++ b/about.html
@@ -1,126 +1,255 @@
 <!doctype html>
+
 <html>
+
 <title>Tarud Design - About</title>
-  <link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
+
+<link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="/ft.css">
+
+<link rel="stylesheet" href="/ft_black.css">
+
+<link rel="stylesheet" href="/ft_fonts.css">
+
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  
-<style>  
-  
-  h1 {
-   font-family: 'Roboto', sans-serif;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  header,
-  footer {
-  color: white;
-  background-color: black;
-  }
-  
-  footer {
-    font-size: 10px;
-    text-align: center;
-    margin: 0;
-  }
-  
-</style>  
-  
+
+
+
+<style> 
+
+
+
+h1 {
+
+font-family: 'Roboto', sans-serif;
+
+}
+
+
+
+body {
+
+margin: 0;
+
+}
+
+
+
+header,
+
+footer {
+
+color: white;
+
+background-color: black;
+
+}
+
+
+
+footer {
+
+font-size: 10px;
+
+text-align: center;
+
+margin: 0;
+
+}
+
+
+
+</style> 
+
+
+
 <body>
 
-<!-- Navbar -->
-<div class="w3-top">
- <ul class="w3-navbar w3-theme-d2 w3-left-align">
-  <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
-    <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  </li>
-  <li><a href="/index.html" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
-  <li class="w3-hide-small"><a href="/about.html" class="w3-hover-white">About</a></li>
-   <li class="w3-hide-small"><a href="/work.html" class="w3-hover-white">Work</a></li>
-  <li class="w3-hide-small"><a href="/services.html" class="w3-hover-white">Services</a></li>
-  <li class="w3-hide-small"><a href="/contact.html" class="w3-hover-white">Contact</a></li>
- </ul>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
-    <ul class="w3-navbar w3-left-align w3-theme">
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/work.html">Work</a></li>
-      <li><a href="/services.html">Services</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-    </ul>
-  </div>
+
+<!-- Navbar -->
+
+<div class="ft-top">
+
+<ul class="ft-navbar ft-theme-d2 ft-left-align">
+
+<li class="ft-hide-medium ft-hide-large ft-opennav ft-right">
+
+<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+
+</li>
+
+<li><a href="/index.html" class="ft-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
+
+<li class="ft-hide-small"><a href="/about.html" class="ft-hover-white">About</a></li>
+
+<li class="ft-hide-small"><a href="/work.html" class="ft-hover-white">Work</a></li>
+
+<li class="ft-hide-small"><a href="/services.html" class="ft-hover-white">Services</a></li>
+
+<li class="ft-hide-small"><a href="/contact.html" class="ft-hover-white">Contact</a></li>
+
+</ul>
+
+
+
+<!-- Navbar on small screens -->
+
+<div id="navDemo" class="ft-hide ft-hide-large ft-hide-medium">
+
+<ul class="ft-navbar ft-left-align ft-theme">
+
+<li><a href="/about.html">About</a></li>
+
+<li><a href="/work.html">Work</a></li>
+
+<li><a href="/services.html">Services</a></li>
+
+<li><a href="/contact.html">Contact</a></li>
+
+</ul>
+
 </div>
-    
-<div class="w3-container w3-padding-64 w3-center" id="team">
+
+</div>
+
+
+
+<div class="ft-container ft-padding-64 ft-center" id="team">
+
 <h1>MEET FRANCISCO TARUD</h1>
 
-<div class="w3-row"><br>
 
-  <img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="min-height:100px;max-height:300px;" class="w3-circle w3-hover-opacity">
-  <br><br>
-  <h4><b>Advertiser</b></h4>
-  <p>One of the most important skills an advertiser can possess is the ability to easily relate to and communicate with other people. Francisco has outstanding interpersonal skills and ability to create strong lasting relationships. He also has the ability to be self-motivated, organized and persistent.</p>
-  <br>
-  <h4><b>Graphic Designer</b></h4>
-  <p>Our Graphic Designer has strong writing, presentation, interpersonal and creative skills. Since creative professionals often work with marketing, advertising and other departments, it is essential that he collaborates well with different roles and levels within his organization. Francisco is very analytical and capable of solving complex issues using artistic concepts and solutions. Other skills include prioritizing and managing different tasks, and supervising and training junior-level graphic designers.</p>
-  <br>
-  <h4><b>Web Designer</b></h4>
-  <p>Our Web Designer knows the standard differences in style and function between sites for different purposes, such as business, personal, entertainment and information. Francisco is also able to design using code as well as coding programs. Common codes include HTML, XHTML, Javascript and PHP. He is not just a programmer, but an artist who creates visually appealing sites. In addition to building web sites, he is often responsible for maintaining and updating them.</p>
-  <br>
-  <h4><b>Photographer</b></h4>
-  <p>Our Photographer has excellent creative abilities, as well as good eyesight and the ability to translate the images he sees with his eyes to one captured by the camera. Francisco is not just good with a camera, but also has in-depth knowledge about lighting conditions. Often working outdoors, and scheduling the right time to take a photo so it presents the subject in the best light. Sometimes working with assistants and models, Francisco is able to communicate effectively to capture the proper images.</p>
+
+<div class="ft-row"><br>
+
+
+
+<img src="fjtarud.github.io/IMG_6521.JPG" alt="Francisco Tarud" style="min-height:100px;max-height:300px;" class="ft-circle ft-hover-opacity">
+
+<br><br>
+
+<h4><b>Advertiser</b></h4>
+
+<p>One of the most important skills an advertiser can possess is the ability to easily relate to and communicate with other people. Francisco has outstanding interpersonal skills and ability to create strong lasting relationships. He also has the ability to be self-motivated, organized and persistent.</p>
+
+<br>
+
+<h4><b>Graphic Designer</b></h4>
+
+<p>Our Graphic Designer has strong writing, presentation, interpersonal and creative skills. Since creative professionals often work with marketing, advertising and other departments, it is essential that he collaborates well with different roles and levels within his organization. Francisco is very analytical and capable of solving complex issues using artistic concepts and solutions. Other skills include prioritizing and managing different tasks, and supervising and training junior-level graphic designers.</p>
+
+<br>
+
+<h4><b>Web Designer</b></h4>
+
+<p>Our Web Designer knows the standard differences in style and function between sites for different purposes, such as business, personal, entertainment and information. Francisco is also able to design using code as well as coding programs. Common codes include HTML, XHTML, Javascript and PHP. He is not just a programmer, but an artist who creates visually appealing sites. In addition to building web sites, he is often responsible for maintaining and updating them.</p>
+
+<br>
+
+<h4><b>Photographer</b></h4>
+
+<p>Our Photographer has excellent creative abilities, as well as good eyesight and the ability to translate the images he sees with his eyes to one captured by the camera. Francisco is not just good with a camera, but also has in-depth knowledge about lighting conditions. Often working outdoors, and scheduling the right time to take a photo so it presents the subject in the best light. Sometimes working with assistants and models, Francisco is able to communicate effectively to capture the proper images.</p>
+
 </div>
-</div>  
-<div class="w3-container w3-padding-64 w3-center" id="resume">
-<div class="w3-row">
+
+</div> 
+
+<div class="ft-container ft-padding-64 ft-center" id="resume">
+
+<div class="ft-row">
+
 <iframe src="/Francisco Tarud Resume.pdf" height="640px" width="640px"></iframe>
-</div>
-</div>
-  
 
-  
+</div>
+
+</div>
+
+
+
+
+
+
+
 <!-- Footer -->
+
 <footer>
-  <br>
-  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
-  <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
-  <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
-  <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
-  <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
-  <br>
-  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
+<br>
+
+<a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
+
+<a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
+
+<a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
+
+<a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
+
+<a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
+
+<br>
+
+<br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
 </footer>
 
+
+
 <!-- Script For Side Navigation -->
+
 <script>
-function w3_open() {
-    var x = document.getElementById("mySidenav");
-    x.style.width = "300px";
-    x.style.textAlign = "center";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
+
+function ft_open() {
+
+var x = document.getElementById("mySidenav");
+
+x.style.width = "300px";
+
+x.style.textAlign = "center";
+
+x.style.fontSize = "40px";
+
+x.style.paddingTop = "10%";
+
+x.style.display = "block";
+
 }
-function w3_close() {
-    document.getElementById("mySidenav").style.display = "none";
+
+function ft_close() {
+
+document.getElementById("mySidenav").style.display = "none";
+
 }
+
 // Used to toggle the menu on smaller screens when clicking on the menu button
+
 function openNav() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
+
+var x = document.getElementById("navDemo");
+
+if (x.className.indexOf("ft-show") == -1) {
+
+x.className += " ft-show";
+
+} else {
+
+x.className = x.className.replace(" ft-show", "");
+
 }
+
+}
+
 </script>
 
+
+
 </body>
+
 </html>
+
+
+
+
