--- a/final-extra-credit.html
+++ b/final-extra-credit.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- Francisco Tarud -->
+<!doctype html><!-- Francisco Tarud's Final Extra Credit -->
 <html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
@@ -23,6 +23,7 @@ p {
   width: 652px;
   line-height: 52px;
   margin-bottom: 32px;
+  padding-left: 30px;
   }
 
 nav a {
@@ -39,7 +40,7 @@ nav a {
   }
   
 header {
-  min-height: 140px;
+  min-height: 100px;
   }
   
 .masthead {
