--- a/final-extra-credit.html
+++ b/final-extra-credit.html
@@ -40,7 +40,7 @@ nav a {
   }
   
 header {
-  min-height: 100px;
+  min-height: 140px;
   }
   
 .masthead {
@@ -51,15 +51,12 @@ header {
   line-height: 23px;
   }
   
-.logo {
-  height: 27px;
-  }
 
 </style>
 
 <body>
 <header class="masthead">
-<div class="logo"><a href="/final-extra-credit.html" title="Believe in logo"><img src="fjtarud.github.io/Believe_In_Logo.jpg"></a></div>
+<div><a href="/final-extra-credit.html" title="Believe in logo"><img src="fjtarud.github.io/Believe_In_Logo.jpg" height="22px"></a></div>
 <nav>
   <a href="/final-extra-credit.html">Work</a>
   <a href="/final-extra-credit.html">Studios</a>
