--- a/final-extra-credit.html
+++ b/final-extra-credit.html
@@ -43,7 +43,7 @@ header {
   min-height: 100px;
   }
   
-.masthead {
+#masthead {
   padding-top: 48px;
   padding-left: 36px;
   display: block;
@@ -70,6 +70,7 @@ div {
   }
   
 #showcase {
+  width: 900px;
   padding: 0px;
   margin-left: -12px;
   margin-top: 24px;
@@ -122,7 +123,7 @@ div {
 </style>
 
 <body>
-<header class="masthead">
+<header id="masthead">
 <a href="/final-extra-credit.html" title="Believe in logo"><img src="fjtarud.github.io/Believe_In_Logo.jpg" height="22px"></a>
 <nav>
   <a href="/final-extra-credit.html">Work</a>
